--- a/setup.cfg
+++ b/setup.cfg
@@ -8,6 +8,6 @@ VCS = git
 style = pep440
 versionfile_source = uvio/_version.py
 #versionfile_build = uvio/_version.py
-tag_prefix = ""
+tag_prefix =
 #parentdir_prefix =
 
