--- a/circle.yml
+++ b/circle.yml
@@ -11,5 +11,5 @@ dependencies:
     - bash Miniconda-latest-Linux-x86_64.sh -b
     - conda install anaconda-client conda=4.0.5 conda-build=1.20.0 -y
     - conda config --add channels sean
-    - conda install uvio Cython
+    - conda install -y libuv Cython
 
