--- a/circle.yml
+++ b/circle.yml
@@ -12,4 +12,6 @@ dependencies:
     - conda install anaconda-client conda=4.0.5 conda-build=1.20.0 -y
     - conda config --add channels sean
     - conda install -y libuv Cython
-
+  
+  override:
+    - $PYTHON setup.py install
