--- a/circle.yml
+++ b/circle.yml
@@ -1,17 +1,21 @@
 machine:
   environment:
-    MINICONDA: /home/ubuntu/miniconda2
-    PATH: /home/ubuntu/miniconda2/bin:$PATH
+    MINICONDA: /home/ubuntu/miniconda
+    PYTHON: /home/ubuntu/miniconda/bin/python
+    PATH: /home/ubuntu/miniconda/bin:$PATH
     PYTHONUNBUFFERED: 1
 
 dependencies:
   pre:
 
-    - wget https://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh
-    - bash Miniconda-latest-Linux-x86_64.sh -b
+    - wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh
+    - bash miniconda.sh -b -p $MINICONDA
     - conda install anaconda-client conda=4.0.5 conda-build=1.20.0 -y
     - conda config --add channels sean
     - conda install -y libuv Cython
   
   override:
     - $PYTHON setup.py install
+
+# test:
+#   ov
